# js-wasm-rpc-client

./: README.md  package-lock.json  package.json
src/: Instance.js  Module.js  WasmRPC.js  index.js  simple-wasm.js
test/: simple-wasm-test.js  wasm-rpc-test.js
test/support/tester/: Cargo.toml  package.json
test/support/tester/src/: errors.rs  lib.rs  tester.rs
test/support/wasm/: Makefile  test.wasm
test/support/wasm/_build/: echo.bc  echo.s  echo.wasm  echo.wast  test.bc  test.s  test.wast  token.bc  token.s  token.wasm  token.wast
test/support/wasm/src/: test.c
